# projects

./: README.md
nn_for_predicting_the_calorie/: README.md  requirements.txt
nn_for_predicting_the_calorie/data/: test.csv  train.csv  val.csv
nn_for_predicting_the_calorie/scripts/: dataset.py  utils.py
parser_shop/: Dockerfile  README.md  pyproject.toml  vm key.txt
parser_shop/parser_shop/: __init__.py  engine.py  get_etalon.py  getter.py  parsers.py
parser_shop/parser_shop/bot/: bot_telegram.py
parser_shop/parser_shop/etalon_price/: etalon_price.xlsx
parser_shop/parser_shop/script/: start.py
tablet-classifier/: README.md  requirements.txt
